--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio Website</title>
+  <title>Nuel Portfolio Website</title>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+
 </head>
 <body>
   <div id="root">
